k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: monos.local
    http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Prefix
        path: /AuthService/(.*)
        backend:
          service:
            name: authservice
            port:
              number: 8081
      - pathType: Prefix
        path: /api/personas/(.*)
        backend:
          service:
            name: buscarpersonas
            port:
              number: 8082
